ui: fix table height overflowing parent div
Fixes: #67769

This commit prevents statements, transactions, and sessions
tables from overflowing parent containers when overflow is
hidden.

The absence of a relatively positioned parent for absolutely
positioned elements within an overflow: hidden container was
causing incorrect behaviour where users could scroll vertically
on the body of the statements, transactions and sessions pages.

Release justification: bug fixes and low-risk updates
to new functionality

Release note (bug fix): Users can now only scroll in the content
section of the transactions, statements and sessions pages.

--- a/pkg/ui/workspaces/cluster-ui/src/statementsPage/statementsPage.module.scss
+++ b/pkg/ui/workspaces/cluster-ui/src/statementsPage/statementsPage.module.scss
@@ -54,6 +54,7 @@ h2.base-heading {
 }
 
 .table-area {
+  position: relative;
   width: fit-content;
 }
 
